# sourmash_plugin_template_test1

./: pyproject.toml
src/: sourmash_plugin_test1.py  sourmash_plugin_xyz.py
tests/: test_sourmash_plugin.py
