# CTB: search for XYZ and replace with plugin-specific information!

[project]
name = "sourmash_plugin_test1"
description = "sourmash plugin to do Test1."
readme = "README.md"
requires-python = ">=3.8"
version = "0.1"

dependencies = ["sourmash>=4.6.1,<5"]

[metadata]
license = { text = "BSD 3-Clause License" }

# CTB note: do not need both reader and writer.

[project.entry-points."sourmash.load_from"]
test1_reader = "sourmash_plugin_test1:load_sketches"

[project.entry-points."sourmash.save_to"]
test1_writer = "sourmash_plugin_test1:SaveSignatures_Test1"

[project.entry-points."sourmash.cli_script"]
test1_cmd = "sourmash_plugin_test1:ScriptsCommand_Test1"
